# hedgeModel

./: .gitignore  2026-06-22.md  2026-06-25.md  2026-06-29.md  2026-06-30.md  2026-07-14.md  2026-07-19.md  2026-07-23.md  AGENTS.md  Kanban.md  PROJECT-RULES.md  README.md  T001-conditions-closing.md  T003-roll-economics.md  T005-adaptation-strategy-selection.md  T007-option-card.md  T009-active-layer-selection.md  T010-layer-resource-management.md  T011-layer-health-monitoring.md  T012-update-algorithms.md  config.toml  gen_config.py  hedge_model.db  hedge_model.db-shm  hedge_model.db-wal  pyproject.toml  requirements-dev.txt  requirements.txt  schema.sql  sol_options_chain.xlsx
.obsidian/: workspace.json
dashboard/: app.js  index.html  server.py
data/: buy_history.csv  closed_positions.csv  open_positions.csv  options_registry.csv  options_tracking.csv
dev/: 400-deployment.md  500-debug-log.md  900-ideas.md  901-project-setup.md  GIT.md  T002-theta-monitoring.md  T003-roll-economics.md  T004-monitor-open-options.md  T007-dashboard.md
docs/: 000-MOC.md  000-ZK-rules.md  100-strategy.md  101-anchor-layer.md  102-adaptation-layer.md  103-active-layer.md  104-active-closing-rules.md  200-budget-allocation.md  201-selection-criteria.md  202-formulas.md  203-anchor-selection-algorithm.md  204-active-layer-selection.md  300-pipeline.md  301-optionboard-script.md  302-lastprice-script.md  400-deployment.md  401-positions-storage.md  402-database-schema.md  501-option-selection-diagnostics.md  600-greeks-guide.md  900-ideas.md  900-open-tasks.md  900-research-backlog.md  (+6 more)
(+22 files in other folders)
