[project]
name = "hedgeModel"
version = "0.1.0"
description = "Система многослойного хеджирования SOL через Put-опционы"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137",
    "uvicorn>=0.49",
    "pandas>=3.0",
    "numpy>=2.4",
    "openpyxl>=3.1",
    "requests>=2.34",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12",
    "pytest>=8.0",
]

[project.scripts]
hedge-pipeline = "src.pipeline:main"
hedge-dashboard = "dashboard.server:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
